# NuklearOgre

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  NuklearInclude.h  NuklearOgreDemo.cpp  NuklearOgreGameState.cpp  NuklearOgreGameState.h
demo/resources/: Nuklear.compositor
demo/resources/Hlms/: Nuklear_piece_vs.any
include/: CompositorPassNuklear.h  CompositorPassNuklearDef.h  CompositorPassNuklearProvider.h  HlmsNuklear.h  HlmsNuklearDatablock.h  NuklearItem.h  NuklearOgre.h  NuklearRenderable.h  NuklearRenderer.h  RegisterCompositor.h  RegisterCustomPass.h
src/: CompositorPassNuklear.cpp  CompositorPassNuklearProvider.cpp  NuklearOgre.cpp  NuklearRenderable.cpp
